correct alignment of input padding on right side
Before vs After: https://share.getcloudapp.com/12uNn5oK

--- a/src/resources/postcss/tickets.pcss
+++ b/src/resources/postcss/tickets.pcss
@@ -84,7 +84,7 @@
 	.tribe_horizontal_datepicker__container {
 		.tribe_horizontal_datepicker {
 			display: inline-block;
-			width: calc((100% / 3) - var(--spacer-1) - 4px); /* 4px = safety margin */
+			width: calc((100% / 3) - var(--spacer-1));
 			max-width: 280px;
 		}
 	}
